--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Paulo Coronado. It uses data from mapbox.com and darksky.net.</p>
         <img class="portrait" src="./img/profile.jpg">
     </div>
 
